# IP_Cam_Decoder

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: FindDecoder.cmake
